@@ -1,7 +1,0 @@
-<?php
-
-return [
-    'externalimport:sync' => [
-        'class' => \Cobweb\ExternalImport\Command\ImportCommand::class
-    ]
-];
